--- a/css/main.css
+++ b/css/main.css
@@ -97,153 +97,178 @@ textarea {
 /* ==========================================================================
    Author's custom styles
    ========================================================================== */
-body{
-	background-color: black;
+body {
+    background-color: black;
 }
 
-div.containers{
-	border: 1px solid white;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	margin-left: 2px;
-	margin-right: 2px;
-	padding-left: 1px;
-	padding-right: 1px;
-	background-color: #7f657f;
-	color: white;
-}
-div.profile-containers{
-	border: 1px solid white;
-	margin-top: 5px;
-	margin-bottom: 5px;
-	margin-left: 2px;
-	margin-right: 2px;
-	padding-left: 1px;
-	padding-right: 1px;
-	background-color: #7f657f;
-	color: white;
-	width: 100%; 
-	padding-right: 10px;
-}
-div.statGroup{
-	border-style: solid;
-	border-color: #00FF00/*#420f59*/;
-	border-width: 1px/*4px 2px 2px 4px*/;
-	margin: 6px 3px 0px 3px;
-	font-size: 15px;
-	padding: 5px 5px 5px 0px;
+div.containers {
+    border: 1px solid white;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 2px;
+    margin-right: 2px;
+    padding-left: 1px;
+    padding-right: 1px;
+    background-color: #7f657f;
+    color: white;
 }
 
-td.main{
-	vertical-align:top;
+div.profile-containers {
+    border: 1px solid white;
+    margin-top: 5px;
+    margin-bottom: 5px;
+    margin-left: 2px;
+    margin-right: 2px;
+    padding-left: 1px;
+    padding-right: 1px;
+    background-color: #7f657f;
+    color: white;
+    width: 100%;
+    padding-right: 10px;
 }
 
-table.leaderTable{
-	width: 100%;
-	text-align: center;
-}
-td.leaderTable{
-	background-color: #420f59;
-	border: 2px solid #7f657f;
-	margin: 1px 1px 1px 1px;
-}
-td.leaderTableValue{
-	background-color: #420f59;
-	border: 2px solid #7f657f;
-	margin: 1px 1px 1px 1px;
-	color: #00FF00;
+div.statGroup {
+    border-style: solid;
+    border-color: #00FF00 /*#420f59*/;
+    border-width: 1px /*4px 2px 2px 4px*/;
+    margin: 6px 3px 0px 3px;
+    font-size: 15px;
+    padding: 5px 5px 5px 0px;
 }
 
-th.leaderTable{
-	background-color: #420f59;
-	border: 2px solid #7f657f;
-	margin: 1px 1px 1px 1px;
-}
-th.header{
-	background-color: #420f59;
-	border: 2px solid #7f657f;
+td.main {
+    vertical-align: top;
 }
 
-select{
-	font-size: 14px;
+table.leaderTable {
+    width: 100%;
+    text-align: center;
 }
 
-a:link {color:#00FF00;}      /* unvisited link */
-a:visited {color:#00FF00;}  /* visited link */
-a:hover {color:#FF00FF;}  /* mouse over link */
-a:active {color:#0000FF;}  /* selected link */
+td.leaderTable {
+    background-color: #420f59;
+    border: 2px solid #7f657f;
+    margin: 1px 1px 1px 1px;
+}
+
+td.leaderTableValue {
+    background-color: #420f59;
+    border: 2px solid #7f657f;
+    margin: 1px 1px 1px 1px;
+    color: #00FF00;
+}
+
+th.leaderTable {
+    background-color: #420f59;
+    border: 2px solid #7f657f;
+    margin: 1px 1px 1px 1px;
+}
+
+th.header {
+    background-color: #420f59;
+    border: 2px solid #7f657f;
+}
+
+select {
+    font-size: 14px;
+}
+
+a:link {
+    color: #00FF00;
+}
+
+/* unvisited link */
+a:visited {
+    color: #00FF00;
+}
+
+/* visited link */
+a:hover {
+    color: #FF00FF;
+}
+
+/* mouse over link */
+a:active {
+    color: #0000FF;
+}
+
+/* selected link */
 
 /*PROFILE PAGE STYLES*/
-td.head{
-	padding-left: 50px;
-	padding-top: 3px;
-	padding-bottom: 3px;
+td.head {
+    padding-left: 50px;
+    padding-top: 3px;
+    padding-bottom: 3px;
 }
-td.stat{
-	text-align: right;
-	padding-right: 20px;
-	padding-left: 15px;
-	background-color: #420f59;
-	border: 2px solid #7f657f;
-	margin: 1px 1px 1px 1px;
-	width: 100px;
+
+td.stat {
+    text-align: right;
+    padding-right: 20px;
+    padding-left: 15px;
+    background-color: #420f59;
+    border: 2px solid #7f657f;
+    margin: 1px 1px 1px 1px;
+    width: 100px;
 }
-td.rank{
-	text-align: center;
-	padding-right: 25px;
-	padding-left: 25px;
-	background-color: #420f59;
-	border: 2px solid #7f657f;
-	margin: 1px 1px 1px 1px;
-	color: #00FF00;
-	width: 100px;
+
+td.rank {
+    text-align: center;
+    padding-right: 25px;
+    padding-left: 25px;
+    background-color: #420f59;
+    border: 2px solid #7f657f;
+    margin: 1px 1px 1px 1px;
+    color: #00FF00;
+    width: 100px;
 }
 
 /*AUTOCOMPLETE STYLES*/
-#autocomplete-div{
-	z-index: 998;
-}
-div.autocomplete{
-	z-index: 999;
-	background-color: #420f59;
-	color: white;
-	position: relative;
-	text-align: left;
-	padding-left: 5px;
-	margin-left: 3px;
-	width: 80%;
-	border-left: 2px solid black;
-	border-right: 2px solid black;
-	border-bottom: 2px solid black;
-	
+#autocomplete-div {
+    z-index: 998;
 }
 
-div.search-top{
-	border-left: 1px solid white;
-	border-right: 1px solid white;
-	border-top: 1px solid white;
-	margin-top: 5px;
-	margin-left: 2px;
-	margin-right: 2px;
-	padding-left: 1px;
-	padding-right: 1px;
-	background-color: #7f657f;
-	color: white;
-	height: 70px;
+div.autocomplete {
+    z-index: 999;
+    background-color: #420f59;
+    color: white;
+    position: relative;
+    text-align: left;
+    padding-left: 5px;
+    margin-left: 3px;
+    width: 80%;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+
 }
-div.search-bot{
-	border-left: 1px solid white;
-	border-right: 1px solid white;
-	border-bottom: 1px solid white;
-	margin-bottom: 5px;
-	margin-left: 2px;
-	margin-right: 2px;
-	padding-left: 1px;
-	padding-right: 1px;
-	background-color: #7f657f;
-	text-align: center; 
-	font-size: 12px; 
-	color: white;
+
+div.search-top {
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    border-top: 1px solid white;
+    margin-top: 5px;
+    margin-left: 2px;
+    margin-right: 2px;
+    padding-left: 1px;
+    padding-right: 1px;
+    background-color: #7f657f;
+    color: white;
+    height: 70px;
+}
+
+div.search-bot {
+    border-left: 1px solid white;
+    border-right: 1px solid white;
+    border-bottom: 1px solid white;
+    margin-bottom: 5px;
+    margin-left: 2px;
+    margin-right: 2px;
+    padding-left: 1px;
+    padding-right: 1px;
+    background-color: #7f657f;
+    text-align: center;
+    font-size: 12px;
+    color: white;
 }
 
 /* ==========================================================================
@@ -358,9 +383,9 @@ div.search-bot{
 }
 
 @media print,
-       (-o-min-device-pixel-ratio: 5/4),
-       (-webkit-min-device-pixel-ratio: 1.25),
-       (min-resolution: 120dpi) {
+(-o-min-device-pixel-ratio: 5/4),
+(-webkit-min-device-pixel-ratio: 1.25),
+(min-resolution: 120dpi) {
     /* Style adjustments for high resolution devices */
 }
 
@@ -393,7 +418,6 @@ div.search-bot{
     /*
      * Don't show links for images, or javascript/internal links
      */
-
     .ir a:after,
     a[href^="javascript:"]:after,
     a[href^="#"]:after {
