Made more mobile responsive, font change.

--- a/templates/base.html
+++ b/templates/base.html
@@ -12,8 +12,9 @@
 
     <!-- Bootstrap Core CSS -->
     <link href="css/bootstrap.min.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
-
+    <link href="css/site.css" rel="stylesheet">
+    <link href="http://fonts.googleapis.com/css?family=Droid+Serif" rel="stylesheet" type="text/css">
+    <link href="http://fonts.googleapis.com/css?family=Droid+Sans" rel="stylesheet" type="text/css">
     <!-- Custom CSS -->
     <style>
         body {
