--- a/templates/selfaddition.html
+++ b/templates/selfaddition.html
@@ -11,7 +11,7 @@
                                                                                               id="profileInpt" size="25">
                     </td>
                     <td style="width: 50%;  vertical-align: bottom;">
-                        <button onclick="submitProfile()">Add Your Stats To The Rankings</button>
+                        <button class="btn btn-default btn-sm" onclick="submitProfile()">Add Your Stats To The Rankings</button>
                         <br>
 
                         <div id="submitMsgDiv"></div>
