--- a/css/site.css
+++ b/css/site.css
@@ -27,3 +27,28 @@ body {
     -webkit-box-shadow: none;
     box-shadow: none;
 }
+.control-group {
+    display: inline-block;
+    vertical-align: top;
+}
+.btn-group{
+    bottom: 15px;
+    position: relative;
+    top: 15px;
+}
+h1 {
+    font: 400 60px/1.3 'Droid Serif', Georgia, serif;
+}
+h2 {
+    font: 400 45px/1.3 'Droid Serif', Georgia, serif;
+}
+h3 {
+    font: 400 30px/1.3 'Droid Serif', Georgia, serif;
+}
+h4 {
+    font: 400 20px/1.3 'Droid Serif', Georgia, serif;
+}
+
+body {
+    font: 400 17px/1.6 'Droid Sans', Helvetica, Arial, sans-serif;
+}
