--- a/templates/search.html
+++ b/templates/search.html
@@ -1,6 +1,6 @@
 <div class="col-lg-12">
     <div class="panel panel-default">
-        <div class="panel-heading text-center"><h3>Search Player Profile By
+        <div class="panel-heading text-center"><h3 class="panel-title">Search Player Profile By
             Name</h3></div>
         <div class="panel panel-body">
             <div style="margin-top: 4px;">
