More JS refactoring.

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -5,9 +5,8 @@
                 <h3 class="pull-left">Leaderboard</h3>
 
                 <div class="btn-group pull-right">
-                    <button class="btn btn-default btn-success"
-                            onclick="getLeaderboard(0, '#LeaderBoard', $('#SelectRange').val(), $('#SelectGame').val(), $('#SelectStat').val(), $('#SelectRow').val(), $('#SelectOrder').val(), $('#SelectActive').val() )">
-                        Update
+                    <button id="refresh-btn" class="btn btn-default btn-success">
+                        Refresh
                     </button>
                 </div>
             </div>
