--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -12,7 +12,7 @@
             </div>
         </div>
         <hr />
-        <div class="row">
+        <div class="row leaderboard-controls">
             <div class="col-lg-12">
 
                 <div class="control-group">
