--- a/templates/selfaddition.html
+++ b/templates/selfaddition.html
@@ -7,11 +7,11 @@
             <table>
                 <tr>
                     <td style="width: 50%; text-align: center; vertical-align: bottom;">
-                        <span style="font-size: 14px;">Enter your Profile ID</span><br><input type="text" name=""
+                        <span style="font-size: 14px;">Enter your Profile ID</span><br><input type="text" class="form-control" name=""
                                                                                               id="profileInpt" size="25">
                     </td>
                     <td style="width: 50%;  vertical-align: bottom;">
-                        <button class="btn btn-default btn-sm" onclick="submitProfile()">Add Your Stats To The Rankings</button>
+                        <button class="btn btn-default btn-sm" onclick="submitProfile()">Add</button>
                         <br>
 
                         <div id="submitMsgDiv"></div>
