--- a/templates/profile.html
+++ b/templates/profile.html
@@ -5,7 +5,7 @@
 <div class="panel panel-default">
 <div class="panel-heading text-center">
     <h3>
-        Career stats for <a href="{{row.vc_profile_string}}">{{ row.vc_name }}</a>
+        Career stats for <a href="http://tagpro-origin.koalabeast.com/profile/{{row.vc_profile_string}}">{{ row.vc_name }}</a>
     </h3>
 </div>
 <div class="panel-body table-responsive">
@@ -264,7 +264,7 @@
 <div class="panel-heading text-center">
     <h3>{{ month }} Record and Stats</h3>
 </div>
-<div>
+<div class="table-responsive">
 <table class="table table-striped table-bordered statstable">
 <tr>
 <td style="vertical-align: top"><!-- COLUMN #1 -->
