Made container fluid.

--- a/templates/base.html
+++ b/templates/base.html
@@ -22,7 +22,7 @@
             /* Required padding for .navbar-fixed-top. Remove if using .navbar-static-top. Change if height of navigation changes. */
         }
     </style>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -33,7 +33,7 @@
 </head>
 
 <body>
-<div class="container">
+<div class="container-fluid">
     {% include "menu.html" %}
     <div class="row">
         <div class="col-lg-8 col-md-12 col-sm-12">
