Removed nonsense from address bar, added permalink button

--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -5,9 +5,9 @@
                 <h3 class="pull-left">Leaderboard</h3>
 
                 <div class="btn-group pull-right">
-                    <button id="refresh-btn" class="btn btn-default btn-success">
-                        Refresh
-                    </button>
+                    <a id="permalink-btn" class="btn btn-default btn-xs">Permalink</a>
+                    <a href="http://tagpro-stats.com" id="permalink-txt" class="btn btn-xs hidden">http://tagpro-stats.com</a>
+                    <button id="refresh-btn" class="btn btn-success btn-xs">Refresh</button>
                 </div>
             </div>
         </div>
